Adicionando readme.md e subindo correções

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
         </dependency>
 
     </dependencies>
+    <properties>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
+    </properties>
 
 
 </project>
